@@ -42,26 +42,26 @@ typedef struct _XfceMenuDirectory        XfceMenuDirectory;
 #define XFCE_IS_MENU_DIRECTORY_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE ((klass), XFCE_TYPE_MENU_DIRECTORY))
 #define XFCE_MENU_DIRECTORY_GET_CLASS(obj)  (G_TYPE_INSTANCE_GET_CLASS ((obj), XFCE_TYPE_MENU_DIRECTORY, XfceMenuDirectoryClass))
 
-GType                    xfce_menu_directory_get_type            (void) G_GNUC_CONST;
+GType                    xfce_menu_directory_get_type                (void) G_GNUC_CONST;
 
-GFile                   *xfce_menu_directory_get_file            (XfceMenuDirectory *directory);
-const gchar             *xfce_menu_directory_get_name            (XfceMenuDirectory *directory);
-void                     xfce_menu_directory_set_name            (XfceMenuDirectory *directory,
-                                                                  const gchar       *name);
-const gchar             *xfce_menu_directory_get_comment         (XfceMenuDirectory *directory);
-void                     xfce_menu_directory_set_comment         (XfceMenuDirectory *directory,
-                                                                  const gchar       *comment);
-const gchar             *xfce_menu_directory_get_icon            (XfceMenuDirectory *directory);
-void                     xfce_menu_directory_set_icon            (XfceMenuDirectory *directory,
-                                                                  const gchar       *icon);
-gboolean                 xfce_menu_directory_get_no_display      (XfceMenuDirectory *directory);
-void                     xfce_menu_directory_set_no_display      (XfceMenuDirectory *directory,
-                                                                  gboolean           no_display);
-gboolean                 xfce_menu_directory_get_hidden          (XfceMenuDirectory *directory);
-gboolean                 xfce_menu_directory_show_in_environment (XfceMenuDirectory *directory);
-gboolean                 xfce_menu_directory_get_visible         (XfceMenuDirectory *directory);
-gboolean                 xfce_menu_directory_equal               (XfceMenuDirectory *directory,
-                                                                  XfceMenuDirectory *other);
+GFile                   *xfce_menu_directory_get_file                (XfceMenuDirectory *directory);
+const gchar             *xfce_menu_directory_get_name                (XfceMenuDirectory *directory);
+void                     xfce_menu_directory_set_name                (XfceMenuDirectory *directory,
+                                                                      const gchar       *name);
+const gchar             *xfce_menu_directory_get_comment             (XfceMenuDirectory *directory);
+void                     xfce_menu_directory_set_comment             (XfceMenuDirectory *directory,
+                                                                      const gchar       *comment);
+const gchar             *xfce_menu_directory_get_icon                (XfceMenuDirectory *directory);
+void                     xfce_menu_directory_set_icon                (XfceMenuDirectory *directory,
+                                                                      const gchar       *icon);
+gboolean                 xfce_menu_directory_get_no_display          (XfceMenuDirectory *directory);
+void                     xfce_menu_directory_set_no_display          (XfceMenuDirectory *directory,
+                                                                      gboolean           no_display);
+gboolean                 xfce_menu_directory_get_hidden              (XfceMenuDirectory *directory);
+gboolean                 xfce_menu_directory_get_show_in_environment (XfceMenuDirectory *directory);
+gboolean                 xfce_menu_directory_get_visible             (XfceMenuDirectory *directory);
+gboolean                 xfce_menu_directory_equal                   (XfceMenuDirectory *directory,
+                                                                      XfceMenuDirectory *other);
 
 #if defined(LIBXFCE4MENU_COMPILATION)
 void _xfce_menu_directory_init     (void) G_GNUC_INTERNAL;
