@@ -87,15 +87,6 @@ xfce_menu_element_get_comment (XfceMenuElement *element)
 
 
 const gchar*
-xfce_menu_element_get_comment (XfceMenuElement *element)
-{
-  g_return_val_if_fail (XFCE_IS_MENU_ELEMENT (element), NULL);
-  return (*XFCE_MENU_ELEMENT_GET_IFACE (element)->get_comment) (element);
-}
-
-
-
-const gchar*
 xfce_menu_element_get_icon_name (XfceMenuElement *element)
 {
   g_return_val_if_fail (XFCE_IS_MENU_ELEMENT (element), NULL);
@@ -109,5 +100,23 @@ xfce_menu_element_get_visible (XfceMenuElement *element)
 {
   g_return_val_if_fail (XFCE_IS_MENU_ELEMENT (element), FALSE);
   return (*XFCE_MENU_ELEMENT_GET_IFACE (element)->get_visible) (element);
+}
+
+
+
+gboolean
+xfce_menu_element_get_show_in_environment (XfceMenuElement *element)
+{
+  g_return_val_if_fail (XFCE_IS_MENU_ELEMENT (element), FALSE);
+  return (*XFCE_MENU_ELEMENT_GET_IFACE (element)->get_show_in_environment) (element);
+}
+
+
+
+gboolean
+xfce_menu_element_get_no_display (XfceMenuElement *element)
+{
+  g_return_val_if_fail (XFCE_IS_MENU_ELEMENT (element), FALSE);
+  return (*XFCE_MENU_ELEMENT_GET_IFACE (element)->get_no_display) (element);
 }
 
